# rtt-lwr-controller

./: README.md  scn-fixed-box-vertical-boris-base.world
ops/: boris_real_kinematic.ops  boris_sim_kinematic.ops  boris_sim_single_arm.ops  dual_arm_proj_dyn_real.ops  dual_arm_proj_dyn_sim.ops  single_arm_proj_dyn_real.ops  single_arm_proj_dyn_sim.ops
src/: .project  CMakeLists.txt  CMakeLists.txt~  KDLParser.cpp  KDLParser.hpp  TorqueCombiner.cpp  TorqueCombiner.hpp  kukaLWRModel.cpp  kukaLWRModel.h
src/controller-contained/: ControllerContained.cpp  ControllerContained.cpp~  ControllerContained.hpp
src/joint-position-ctrl/: JointPositionCtrl.cpp  JointPositionCtrl.cpp~  JointPositionCtrl.hpp
src/kinematic-chain/: ChainBase.cpp  ChainBase.h
src/kinematic-task-space/: KTSController.cpp  KTSController.h
src/projected-impedance-controller/: PICController.cpp  PICController.h
src/rjpi-controller/: KTSController.cpp~  KTSController.h~  PICController.cpp~  RJPIController.cpp  RJPIController.cpp~  RJPIController.h  RJPIController.h~
src/torque-transition/: TorqueTransition.cpp  TorqueTransition.hpp
src/trajectory-gen/: TrajectoryGen.cpp  TrajectoryGen.hpp
